--- a/src/app/components/bike-card/bike-card.component.scss
+++ b/src/app/components/bike-card/bike-card.component.scss
@@ -5,6 +5,24 @@
   height: 100vh;
 }
 
+.header {
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  width: 100%;
+}
+
+.back-button {
+  width: fit-content;
+  align-self: center;
+  cursor: pointer;
+  padding: 8px 16px;
+  font-size: 16px;
+  background: #e0e0e0;
+  border: 1px solid #c0c0c0;
+  border-radius: 4px;
+  margin-left: 8px;
+}
+
 .bike-card {
   display: flex;
   gap: 16px;
@@ -73,4 +91,8 @@
       }
     }
   }
+}
+
+.error-message {
+  color:#c22222
 }
