--- a/src/app/components/bike-card/bike-card.component.html
+++ b/src/app/components/bike-card/bike-card.component.html
@@ -1,31 +1,34 @@
 <header class="header">
-  <button class="back-button" (click)="goBack()">
-    ← Back
-  </button>
-  <h1 class="title">Bike Data</h1>
+  <button class="back-button" (click)="goBack()">← Back</button>
+  <h1 class="title">Bike Details</h1>
 </header>
 
-@defer (when bike()) {
-  @let bikeData = bike()?.bike!;
-
+@if (bike()?.bike; as bikeData) {
   <div class="bike-card">
     <div class="bike-image">
       <img
-        [src]="bikeData.large_img || bikeData.thumb || 'assets/default-bike.jpg'"
+        [ngSrc]="
+          bikeData.large_img || bikeData.thumb || 'assets/default-bike.jpg'
+        "
+        [placeholder]="'assets/default-bike.jpg'"
+        width="150"
+        height="150"
         alt="{{ bikeData.title }}"
       />
     </div>
     <div class="bike-info">
       <h2>{{ bikeData.title }}</h2>
-      <p><strong>Description:</strong> {{ bikeData.description || "-" }}</p>
+      <p><strong>Description:</strong> {{ bikeData.description || '-' }}</p>
 
       <div class="metadata">
-        <p><strong>Serial:</strong> {{ bikeData.serial || "-"  }}</p>
-        <p><strong>Stolen from:</strong> {{ bikeData.stolen_location || "-" }}</p>
-        <p><strong>Found at:</strong> {{ bikeData.location_found || "-" }}</p>
+        <p><strong>Serial:</strong> {{ bikeData.serial || '-' }}</p>
+        <p>
+          <strong>Stolen from:</strong> {{ bikeData.stolen_location || '-' }}
+        </p>
+        <p><strong>Found at:</strong> {{ bikeData.location_found || '-' }}</p>
         <p>
           <strong>Status:</strong>
-          {{ bikeData.status || (bikeData.stolen ? "Stolen" : "Unknown") }}
+          {{ bikeData.status || (bikeData.stolen ? 'Stolen' : 'Unknown') }}
         </p>
       </div>
 
@@ -37,14 +40,10 @@
       </div>
     </div>
   </div>
-}
-
-@placeholder (minimum 1s) {
-  @if (!bikeError()) {
-    <app-loading></app-loading>
-  }
+} @else if (!bikeError()) {
+  <app-loading></app-loading>
 }
 
 @if (bikeError() && bikeError()!.error.error; as error) {
-  <h3 class="error-message">{{error}}</h3>
+  <h3 class="error-message">{{ error }}</h3>
 }
