--- a/src/app/components/bike-card/bike-card.component.scss
+++ b/src/app/components/bike-card/bike-card.component.scss
@@ -25,15 +25,17 @@
 
 .bike-card {
   display: flex;
+  flex-direction: row;
   gap: 16px;
   padding: 24px;
   border-radius: 16px;
-  background: #FFFFFF;
+  background: #ffffff;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
-  max-width: 640px;
+  width: 640px;
   flex-wrap: wrap;
 
   .bike-image {
+    align-content: center;
     flex: 0 0 150px;
 
     img {
@@ -49,7 +51,7 @@
       transform: scale(3);
       transform-origin: top;
       box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
-      border: 1px solid #FFFFFF;
+      border: 1px solid #ffffff;
     }
   }
 
@@ -94,5 +96,5 @@
 }
 
 .error-message {
-  color:#c22222
+  color: #c22222;
 }
