--- a/src/app/components/bike-list/bike-list.component.html
+++ b/src/app/components/bike-list/bike-list.component.html
@@ -1,53 +1,52 @@
-<h1>BikeIndex Search App</h1>
+<h1>Bike Search</h1>
 
-@defer (when bikes()) {
-  @let bikesList = bikes();
+<div class="search-bar">
+  <input
+    type="text"
+    placeholder="Search bike by city"
+    [(ngModel)]="searchValue"
+  />
+</div>
+<div class="pagination">
+  <button [disabled]="this.currentPage() <= 1" (click)="firstPage()">
+    ‹‹ First
+  </button>
 
-  <div class="search-bar">
-    <input
-      type="text"
-      placeholder="Search bike by city"
-      [(ngModel)]="searchValue"
-    />
-  </div>
-  <div class="pagination">
-    <button [disabled]="this.currentPage() <= 1" (click)="firstPage()">
-      ‹‹ First
-    </button>
+  <button [disabled]="this.currentPage() <= 1" (click)="prevPage()">
+    ‹ Prev
+  </button>
 
-    <button [disabled]="this.currentPage() <= 1" (click)="prevPage()">
-      ‹ Prev
-    </button>
+  <span>Page {{ currentPage() }} of {{ allPages() }}</span>
 
-    <span>Page {{ currentPage() }} of {{ allPages() }}</span>
+  <button [disabled]="this.currentPage() >= allPages()" (click)="nextPage()">
+    Next ›
+  </button>
 
-    <button [disabled]="this.currentPage() >= allPages()" (click)="nextPage()">
-      Next ›
-    </button>
+  <button [disabled]="this.currentPage() >= allPages()" (click)="lastPage()">
+    Last ››
+  </button>
+</div>
 
-    <button [disabled]="this.currentPage() >= allPages()" (click)="lastPage()">
-      Last ››
-    </button>
-  </div>
+@if (bikes()?.bikes; as bikesList) {
   <div class="bike-list-wrapper">
     <ul class="bike-list">
-      @for (bike of bikesList?.bikes; track bike.id) {
+      @for (bike of bikesList; track bike.id) {
         <li class="bike-card" (click)="onBikeClick(bike.id)">
           <div class="bike-info">
-            <h3 class="bike-title">{{ bike.title || "Untitled Bike" }}</h3>
+            <h3 class="bike-title">{{ bike.title || 'Untitled Bike' }}</h3>
 
             <div class="bike-tags">
-              @for (color of bike.frame_colors; track color) {
-                <span class="badge color">{{ color }}</span>
-              }
-
               <span
                 class="badge status"
                 [class.stolen]="bike.stolen"
                 [class.found]="!bike.stolen"
               >
-                {{ bike.stolen ? "Stolen" : "Recovered" }}
+                {{ bike.stolen ? 'Stolen' : 'Recovered' }}
               </span>
+
+              @for (color of bike.frame_colors; track color) {
+                <span class="badge color">{{ color }}</span>
+              }
             </div>
           </div>
 
@@ -60,6 +59,6 @@
       }
     </ul>
   </div>
-} @placeholder (minimum 1s) {
+} @else {
   <app-loading></app-loading>
 }
