--- a/src/app/components/bike-list/bike-list.component.scss
+++ b/src/app/components/bike-list/bike-list.component.scss
@@ -21,7 +21,9 @@
     border: 1px solid #c0c0c0;
     border-radius: 16px;
     background-color: #f0f0f0;
-    transition: border-color 0.2s, box-shadow 0.2s;
+    transition:
+      border-color 0.2s,
+      box-shadow 0.2s;
 
     &:focus {
       outline: none;
@@ -44,7 +46,7 @@
 
   button {
     background-color: #4320f5;
-    color: #FFFFFF;
+    color: #ffffff;
     border: none;
     padding: 8px 16px;
     font-weight: 600;
@@ -73,18 +75,17 @@
   flex-grow: 1;
   overflow-y: auto;
   height: 100%;
-  width: 100%;
+  margin-bottom: 12px;
 }
 
 .bike-list {
   display: flex;
   flex-direction: column;
-  flex-grow: 1;
-  overflow-y: auto;
   padding: 0;
   margin: 0;
   list-style: none;
-  min-width: 640px;
+  min-width: 240px;
+  width: 640px;
   gap: 12px;
 }
 
@@ -97,7 +98,9 @@
   border-radius: 8px;
   background-color: #f0f0f0;
   cursor: pointer;
-  transition: background-color 0.2s, box-shadow 0.2s;
+  transition:
+    background-color 0.2s,
+    box-shadow 0.2s;
 }
 
 .bike-card:hover {
